[package]
name = "hybrid-escrow-contract"
version = "1.0.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.9.0"
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "hybrid-escrow-contract"
path = "src/main.rs"

[features]
export-abi = ["stylus-sdk/export-abi"]

[lints.clippy]
uninlined_format_args = "allow"
